HEAD
	+ Set noexpiry of administrator account only in DC mode, prevents
	  error when user exists with a different name like "administrador"
5.0.1
	+ Remove acl and user_xattr mount options related code as ext4 already
	  has them enabled by default
	+ Fix module restart in postinst
5.0
	+ Integrate Samba 4.5
	+ Remove perl bindings to use just samba upstream packages,
	  current sysvol sync also deprecated, workaround at
	  https://wiki.samba.org/index.php/Rsync_based_SysVol_replication_workaround
	  this affects also ad-migrate script, currently it will not sync GPOs
	+ Use winbind instead of sssd
	+ DNS updates now done via GSS-TSIG no longer require custom samba patch
	+ Remove deprecated scannedonly integration
	+ Adapt code to perl 5.22
	+ zentyal.set-uid-gid-numbers renamed to zentyal.samba-sync to include
	  more functionality in next versions
4.2.3
	+ Add cron to flush idmap cache to avoid auth issues
4.2.2
	+ Add systemQuota object class when setting user quota
	+ Added explicit check for full name in EBox::Samba::User::create
	+ Add systemQuota object class when setting user quota
4.2.1
	+ Remove External AD mode leftovers in menu when not configured
4.2
	+ Integrate Samba 4.3
4.1.5
	+ Added setup-user script
	+ Added GlusterFS as fs with acl and extended attributes by default
	+ Corrected check for value of listen_all config key
	+ Corrected name for default containers
	+ Added EBox::LdapUserBase::objectInDefaultContainer
	+ Added debug options to stub (commented)
4.1.4
	+ Configuration for openchange notifications with dovecot plugin
	+ Delete obsolete cron file when upgrading from 4.0
4.1.3
	+ Remove deprecated bridged mode condition
4.1.2
	+ Add integration with zentyal-antivirus
4.1.1
	+ Remove wrong Synchronization broken link in the menu
4.1
	+ Remove deprecated OpenChange notifications settings in smb.conf
	+ Disable administrator account expiration on provision
	+ Remove no longer supported cloud synchronization